# wetter-py

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md
.github/workflows/: build_install_test.yml  create-release.yml  create_release.yml  static_analysis.yml
cicd-workflows/: build-and-push-docker-images.sh
docs/: index.html
wetter/: .flake8  README.md  check.sh  pyproject.toml
wetter/data/: 2022.json  2023.json  OpenMeteo.json  README.md  data.json  test.json
wetter/tests/: __init__.py  test_app.py  test_backend.py  test_cli.py  test_config.py  test_conn.py  test_core.py  test_queries.py  testconfig.toml  testconfig_changed.toml  testdata.json
wetter/wetter/: __init__.py  app.py  cli.py  config.py  conn.py  core.py  queries.py  tools.py
wetter/wetter/backend/: __init__.py  extern.py  local.py  queries.py
wetter/wetter/config/: __init__.py  config.py  defaults.py  parser.py
